# HMAP-Perception-Source

./: .README.md.swp  .gitignore  EGOMOTION_LOGv2.txt  README.md  bashexec.txt  dw-trt-commands.txt  gp.sh  yes  yes.pub
dataandrig/HaloRigs/: nvhyperion_release.json
dataandrig/KiaRigs/: KiaVehicle.json  can.json  dual_lidars.json  front-nominal.json  gps0.json  gps_rec.json  imu.json  lidar_with_imu.json  rig_video.json
dataandrig/capture-config/: rig.json
dataandrig/cloverleaf2/: rig.json  rig_ego.json
dataandrig/models/: resnet34_fcn_gpu_fp16.bin.json  timing_cache.cache  vehicletypenet.bin.json  yololane.bin.json  yolov3_640x640.bin.json
debug-logs/: egolog1.txt  egolog10.txt  egolog11.txt  egolog14.txt  egolog16.txt  egolog17.txt  egolog21.txt  egolog5.txt  egolog7.txt  egolog9.txt
debug-logs/driveseg/: drivesegout.txt
debug-logs/egomotion/: egolog1.idle1.txt  egolog1.runtime2.txt  egolog12.txt  egolog13.txt  egolog15.txt  egolog18.txt  egolog19.txt  egolog2.txt  egolog20.txt  egolog22.txt  egolog23.txt  egolog25.txt  egolog3.txt  egolog6.txt  egolog8.txt  egologsv2.idle1.txt  sygnalpomo_egomotion
modules/dnn/depthpipeline/: CMakeLists.txt  CameraCapture.cpp  CameraCapture.hpp  DepthInferenceEngine.cpp  DepthInferenceEngine.hpp  DepthPipeline.cpp  DepthPipeline.hpp  DepthRenderer.cpp  DepthRenderer.hpp  MemoryManager.cpp  MemoryManager.hpp  depth_kernels.cu  depth_visualization_kernels.cu  main.cpp
modules/dnn/driveseg_object/: CMakeLists.txt  drivesegserver.cu  drivesegserver.cu.no3d.bak  main.cu.full
modules/dnn/driveseg_resnet_fcn/: CMakeLists.txt  DrivableAreaSegmentation.cpp  DrivableAreaSegmentation.hpp  main.cpp  main.cu
modules/dnn/pointpillarsNet/: CMakeLists.txt  PointPillarDetector.cpp  PointPillarDetector.hpp  main.cpp
modules/egomotion/: CMakeLists.txt  main.cpp  sygnalpomoparser.cpp  sygnalpomoparser.hpp
modules/fusionengine/: CMakeLists.txt  CameraIPCClient.hpp  FusedPacket.hpp  FusionEngine.cpp  FusionEngine.hpp  LidarIPCClient.hpp  SensorSynchronizer.hpp  command.txt  main.cpp
modules/ipc-clients/viz-driveseg-render/driveseg_render/: CMakeLists.txt  main.cpp
modules/python-gps-tracker/: gps_visualizer.py  main.py  main_with_viz.py
modules/sygnal_DIAGNOSIS_KiaCAN/: wheelsensors.py
plugins/canbus/: CMakeLists.txt
plugins/canbus/include/sygnalpomoh/: Common.hpp  SygnalPomoDriver.hpp  sygnalPluginAPI.hpp
plugins/canbus/src/: PluginImpl.cpp  SygnalPomoDriver.cpp
plugins/hap-plugin/: BufferPool.hpp  CMakeLists.txt  LivoxHapPlugin.cpp  LivoxHapPlugin.hpp  LivoxHapProperties.hpp  livox_hap_config.json  main.cpp
plugins/vlp16 and vlp16hr/: README.txt
profiles-from-target/: profiling_example.txt
profiles-from-target/ncu-profiles/: driveseg_all_kernels.ncu-rep
py-postprocessed/lane_segmentation/: dualengine_parser.py  dualengine_parser2.py  dualengine_parser_fused.py  dualenginebygrok.py  parser_area_seg_cuda.py  postprocess_kernels.cu
standaloneapps/bev-fusion/: CMakeLists.txt  main.cpp  readme.txt
standaloneapps/custom_gps_logger/: CMakeLists.txt  README.md  gps_comparison_1757836237.json  gps_log_compare_1757836237.json  main.cpp  path_analysis_1757836237.txt  rig_all.json
standaloneapps/custom_object_tracker/: cmake.txt  main.cpp  readme.txt
standaloneapps/egomotion_pomo/: main.cpp  sygnalpomoparser.hpp
standaloneapps/egomotion_pomo_logger/: CMakeLists.txt  readme.txt  sygnalpomoparser.cpp
standaloneapps/gps_log_dump/: main.cpp  readme.md
standaloneapps/halo-bev-fusion/: README.md
standaloneapps/hap-pluggin/: README.md
standaloneapps/imu_log_dump/: main.cpp  readme.md
standaloneapps/lidar_calibration/: CMakeLists.txt  README.md  command.txt  main.cpp  rig.json
standaloneapps/lidar_centerpoint/: CMakeLists.txt  CenterPointDW.cpp  CenterPointDW.hpp  FreeSpaceDW.cpp  InterLidarICP.cpp  InterLidarICP.hpp  README.md  SimpleTracker.cpp  SimpleTracker.hpp  command.txt  main.cpp
standaloneapps/lidar_centerpoint/centerpoint/: postprocess.cpp
standaloneapps/lidar_det/: CMakeLists.txt  main.cpp
standaloneapps/lidar_icp/: CMakeLists.txt  InterLidarICP.cpp  InterLidarICP.hpp  README.md  main.cpp  rig.json
standaloneapps/lidar_icp_object_detection_free_space/: CMakeLists.txt  FreeSpaceDW.hpp
standaloneapps/lidar_motion_compensation/: CMakeLists.txt  FreeSpaceDW.cpp  InterLidarICP.cpp  InterLidarICP.hpp  Readme.md  command.txt  free_space_logs.txt  rig.json  sygnalpomoparser.cpp  sygnalpomoparser.hpp
standaloneapps/lidar_object_detection/: CMakeLists.txt  InterLidarICP.cpp  InterLidarICP.hpp  README.md
standaloneapps/lidar_object_detection_interprocess_communiation/: CMakeLists.txt  InterLidarICP.cpp  InterLidarICP.hpp  README.md  command.txt  main_consumer.cpp  main_producer.cpp
standaloneapps/lidar_object_detection_ipc_client/: CMakeLists.txt  DetectionPacket.hpp  README.md  command.txt  main.cpp
standaloneapps/lidar_object_detection_ipc_server/: CMakeLists.txt  command.txt
standaloneapps/lidar_object_detection_ipc_visualization/: CMakeLists.txt  command.txt
standaloneapps/lidar_object_detection_with_icp/: CMakeLists.txt  InterLidarICP.cpp  InterLidarICP.hpp  main.cpp
standaloneapps/lidar_object_free/: README.md  main.cpp
standaloneapps/lidar_recorder/: CMakeLists.txt  README.md  command.txt  main.cpp
standaloneapps/lidar_recording_visualizer/: CMakeLists.txt  README.md  command.txt  main.cpp
standaloneapps/lidardet_ipc_client/: CMakeLists.txt  command.txt  (+1 more)
standaloneapps/slam/: CMakeLists.txt  command.txt  readme.md  readme.txt  setup-guide.md
standaloneapps/slam/dw_fastlio/: CMakeLists.txt  command.txt  rig.json
standaloneapps/slam/dw_fastlio/include/: DWFastLIO.hpp  GlobalReloc.hpp  TypeConverters.hpp  fix_eigen_x11.h
standaloneapps/slam/dw_fastlio/src/: DWFastLIO.cpp  GlobalReloc.cpp  main.cpp  main_standalone.cpp
standaloneapps/sygnalpomocontroller/: CMakeLists.txt  SygnalPomoController.cpp  SygnalPomoController.hpp  main.cpp
standaloneapps/sygnalpomointerpreter/: CMakeLists.txt  SygnalPomoMonitor.cpp  SygnalPomoMonitor.hpp  main.cpp
wiring-harness/: readme.txt
(+215 files in other folders)
